force-app/main/default/objects/Trailshred_Setting__mdt/Trailshred_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Define audio clips to play when users update records to specific values.</description>
    <label>Trailshred Setting</label>
    <pluralLabel>Trailshred Settings</pluralLabel>
</CustomObject>