force-app/main/default/objects/Trailshred_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active settings have their audio played. Deactivate or delete a setting to prevent it from firing when its criteria is met.</description>
    <inlineHelpText>Only active settings have their audio played. Deactivate or delete a setting to prevent it from firing when its criteria is met.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>