force-app/main/default/objects/Trailshred_Setting__mdt/fields/Audio_Static_Resource_Path__c.field-meta.xml
<CustomField>
    <fullName>Audio_Static_Resource_Path__c</fullName>
    <description>If the static resource is the audio file, enter just the resource&apos;s name (e.g. gong). If the static resource is a zip file, enter the resource&apos;s name and path within it to the audio file, including extension (e.g. sounds/sales/gong.mp3).</description>
    <inlineHelpText>If the static resource is the audio file, enter just the resource&apos;s name (e.g. gong). If the static resource is a zip file, enter the resource&apos;s name and path within it to the audio file, including extension (e.g. sounds/sales/gong.mp3).</inlineHelpText>
    <label>Audio Static Resource Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>