force-app/main/default/objects/Trailshred_Setting__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The field whose value to monitor to know when to play the audio clip.</description>
    <inlineHelpText>The field whose value to monitor to know when to play the audio clip. Not used if the audio plays for &quot;Validation Error&quot; as that matches on the error message not the field value.</inlineHelpText>
    <label>Field Name</label>
    <metadataRelationshipControllingField>Trailshred_Setting__mdt.Object_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Trailshred_Settings</relationshipLabel>
    <relationshipName>Trailshred_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>