force-app/main/default/objects/Trailshred_Setting__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>The field value when to play the audio clip.</description>
    <inlineHelpText>The field value when to play the audio clip. Not used if the audio plays for &quot;Validation Error&quot; as that matches on the error message not the field value.</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>