force-app/main/default/objects/Trailshred_Setting__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Determines which record form the settings apply to.</description>
    <inlineHelpText>Determines which record form the settings apply to.</inlineHelpText>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trailshred_Settings</relationshipLabel>
    <relationshipName>Trailshred_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>