force-app/main/default/objects/Trailshred_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Audio_Static_Resource_Path__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>